# garagem

./: .gitignore  README.md  db.sqlite3  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_carro.py  0003_rename_carro_veiculo.py
garagem/: settings.py  urls.py
