[tool.poetry]
name = "garagem"
version = "0.1.0"
description = ""
authors = ["gustavokubiack <guukubiack@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
